--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <li><a href="#">Alamat</a></li>
         <li><a href="https://www.instagram.com/anew.child/">Sumber</a></li>
       </ul>
-      <p>@2024 Tifan Ishamiyya</p>
+      <p>@2024 A New Child</p>
     </footer>
 
     <script src="script.js"></script>
